@@ -5,7 +5,6 @@ import javax.swing.*;
 import excepciones.FechaAltaSalidaPosteriorAFechaSalidaException;
 import excepciones.FechaAltaActividadPosteriorAFechaAltaSalidaException;
 import excepciones.SalidaYaRegistradaException;
-import logica.controladores.Fabrica;
 import logica.controladores.IControladorActividadTuristica;
 
 import java.awt.event.ActionListener;
@@ -20,6 +19,9 @@ import javax.swing.event.InternalFrameAdapter;
 import javax.swing.event.InternalFrameEvent;
 
 public class AltaDeSalidaTuristica extends JInternalFrame {
+	private IControladorActividadTuristica ca;
+
+	
 	private JSpinner dia;
 	private JSpinner mes;
 	private JSpinner anio;
@@ -33,13 +35,12 @@ public class AltaDeSalidaTuristica extends JInternalFrame {
 	private JSpinner maxTuristas;
 	private JButton btnAceptar;
 	private JComboBox departamento;
-	Fabrica f = Fabrica.getInstancia();
-	IControladorActividadTuristica ca = f.getIControladorActividadTuristica();
 	
 	/**
 	 * Create the frame.
 	 */
-	public AltaDeSalidaTuristica() {
+	public AltaDeSalidaTuristica(IControladorActividadTuristica ca) {
+		this.ca = ca;
 		addInternalFrameListener(new InternalFrameAdapter() {
 			@Override
 			public void internalFrameClosing(InternalFrameEvent e) {
@@ -200,7 +201,7 @@ public class AltaDeSalidaTuristica extends JInternalFrame {
 		lugar.setColumns(10);
 		
 		maxTuristas = new JSpinner();
-		maxTuristas.setModel(new SpinnerNumberModel(new Integer(1), new Integer(1), null, new Integer(1)));
+		maxTuristas.setModel(new SpinnerNumberModel(Integer.valueOf(1), Integer.valueOf(1), null, Integer.valueOf(1)));
 		maxTuristas.setEnabled(false);
 		maxTuristas.setBounds(227, 257, 60, 20);
 		getContentPane().add(maxTuristas);
@@ -278,6 +279,7 @@ public class AltaDeSalidaTuristica extends JInternalFrame {
 
 	private void aceptarAltaSalidaTuristica() {
 		try{
+			System.out.print(actividadTuristica.getSelectedItem().toString());
 			LocalDate fechaR = LocalDate.of((int)anior.getValue(), (int)mesr.getValue(), (int)diar.getValue());
 			LocalDateTime fecha = LocalDateTime.of((int)anio.getValue(),(int)mes.getValue(),(int)dia.getValue(),(int)hora.getSelectedItem(),0);
 			ca.altaSalidaTuristica(actividadTuristica.getSelectedItem().toString(),nombre.getText().toString(),fecha,fechaR,lugar.getText().toString(), (int)maxTuristas.getValue());
@@ -296,8 +298,8 @@ public class AltaDeSalidaTuristica extends JInternalFrame {
 
 	private void limpiarForm() {
 		nombre.setText("");
-		departamento.setSelectedIndex(0);
-		actividadTuristica.setSelectedIndex(0);
+		departamento.setModel(new DefaultComboBoxModel<>(new String[0]));
+		actividadTuristica.setModel(new DefaultComboBoxModel<>(new String[0]));
 		dia.setValue(1);
 		mes.setValue(1);
 		anio.setValue(2022);
